[tool.poetry]
name = "data-structure-and-algorithm-python"
version = "0.1.0"
description = ""
authors = ["suhib-kharoush <suhaib_kharwash@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
